# maya-grass-gen

./: .gitignore  Makefile  README.md  create_test_scene.py  debug_run.py  maya_import_script.py  pyproject.toml  reload.py  requirements-dev.in  requirements.in  setup.py
.planning/: ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/71-windfield-migration/: 71-03-PLAN.md
.planning/quick/001-add-print-statements-for-pipeline-progress/: 001-SUMMARY.md
docs/: maya-usage-guide.md
maya_grass_plugin/: README.txt  install.mel  maya_grass_plugin.mod  reinstall.mel  uninstall.mel
maya_grass_plugin/scripts/: maya_grass_gen  userSetup.py
scripts/: benchmark.py  benchmark_standalone.py  build_plugin.sh  create_zip.sh  diagnose_dead_zone.py  diagnose_grass.py  diagnose_grass_placement.py  diagnose_terrain_height.py  dump_scene_info.py  export_terrain_obj.py  find_terrain_intersections.py  release.sh  validate_grass_generation.py  validate_mash_attrs.py  validate_terrain_height.py  verify_plugin.sh
src/maya_grass_gen/: USAGE.md  __init__.py  flow_field.py  generator.py  grass_flow_field.py  mesh_query.py  noise_utils.py  terrain.py  ui.py  version.py  wind.py
tests/: conftest.py
tests/geometry/: conftest.py  test_dead_zone.py  test_obstacle_detection.py  test_real_terrain.py  test_terrain_tilts.py
tests/integration/: __init__.py  test_mash_attributes.py
tests/unit/: test_maya_grass.py  test_maya_grass_init.py
